# quant_framework

./: .gitignore  README.md  program.md  pyproject.toml
configs/: guardrails.yaml  persona.yaml
examples/: basic_usage.py
experiments/: evaluate.py  prepare_snapshot.py  strategy.py
quant_framework/: __init__.py  cli.py
quant_framework/connectors/: __init__.py  connectors.py  csv_connector.py  fred.py  yfinance_connector.py
quant_framework/core/: __init__.py  function.py  guardrail.py
quant_framework/functions/: modelling.py
quant_framework/mcp/: __init__.py  generator.py
